updated composer.json requirements

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
 	],
 	"require": {
-		"yiisoft/yii2": "*"
+		"yiisoft/yii2": "*",
+		"php": ">=5.1.2",
 	},
 	"autoload": {
 		"psr-4": {
