--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,12 @@
         }
 	],
 	"require": {
-		"yiisoft/yii2": "*",
-		"php": ">=5.1.2"
+		"yiisoft/yii2": "~2.0.0",
+		"php": ">=5.4"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "~4.0",
+		"phpunit/dbunit": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
