--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ install:
 
 script:
   - vendor/bin/phpunit --coverage-clover=coverage.clover
+
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
