Switch to GitHub actions
Dockerfile php 7.3, 7.4 add libzip-dev dependency

GitHub actions php 5.6 - 7.4

Build status badge - github

GitHub actions php 5.6 - 7.4

fix `Your requirements could not be resolved to an installable set of packages` - add `asset-packagist`

fix composer `Allowed memory size of 1610612736 bytes exhausted`

fix `OCI runtime create failed: container_linux.go:370: starting container process caused: exec: "tests/docker/php/entrypoint.sh": permission denied: unknown`

fix `OCI runtime create failed: container_linux.go:370: starting container process caused: exec: "tests/docker/php/entrypoint.sh": permission denied: unknown`

fix `OCI runtime create failed: container_linux.go:370: starting container process caused: exec: "tests/docker/php/entrypoint.sh": permission denied: unknown`

fix `OCI runtime create failed: container_linux.go:370: starting container process caused: exec: "tests/docker/php/entrypoint.sh": permission denied: unknown`

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,20 @@
 		"psr-4": {
             "corpsepk\\yml\\": ""
         }
+	},
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "https://asset-packagist.org"
+		}
+	],
+	"config": {
+		"process-timeout": 1800,
+		"fxp-asset": {
+			"installer-paths": {
+				"npm-asset-library": "vendor/npm-asset",
+				"bower-asset-library": "vendor/bower-asset"
+			}
+		}
 	}
 }
