--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -15,6 +15,61 @@ services:
     networks:
       net: {}
 
+  php70:
+    build:
+      context: ..
+      dockerfile: tests/docker/php/7.0/Dockerfile
+    volumes:
+      - ../:/code
+      - ./runtime/.composer70:/root/.composer
+    dns: *php_dns
+    networks:
+      net: { }
+
+  php71:
+    build:
+      context: ..
+      dockerfile: tests/docker/php/7.1/Dockerfile
+    volumes:
+      - ../:/code
+      - ./runtime/.composer71:/root/.composer
+    dns: *php_dns
+    networks:
+      net: { }
+
+  php72:
+    build:
+      context: ..
+      dockerfile: tests/docker/php/7.2/Dockerfile
+    volumes:
+      - ../:/code
+      - ./runtime/.composer72:/root/.composer
+    dns: *php_dns
+    networks:
+      net: { }
+
+  php73:
+    build:
+      context: ..
+      dockerfile: tests/docker/php/7.3/Dockerfile
+    volumes:
+      - ../:/code
+      - ./runtime/.composer73:/root/.composer
+    dns: *php_dns
+    networks:
+      net: { }
+
+  php74:
+    build:
+      context: ..
+      dockerfile: tests/docker/php/7.4/Dockerfile
+    volumes:
+      - ../:/code
+      - ./runtime/.composer74:/root/.composer
+    dns: *php_dns
+    networks:
+      net: { }
+
 networks:
   net:
     name: yii2_yandex_market_yml_net
