--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
 		"php": ">=5.6"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.0",
-		"phpunit/dbunit": "~1.0"
+		"phpunit/phpunit": "~4.0"
 	},
 	"autoload": {
 		"psr-4": {
