--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ env:
     COMPOSE_FILE: tests/docker-compose.yml
 jobs:
     phpunit:
+        if: "!contains(github.event.commits[0].message, '[skip ci]')"
         name: PHP ${{ matrix.php }}
         runs-on: ubuntu-latest
         strategy:
