--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         }
 	],
 	"require": {
-		"yiisoft/yii2": "~2.0.0",
-		"php": ">=5.6"
+		"ext-xmlwriter": "*",
+		"php": ">=8.1",
+		"yiisoft/yii2": "~2.0.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.0"
+		"phpunit/phpunit": "^10"
 	},
 	"autoload": {
 		"psr-4": {
@@ -39,6 +40,9 @@
 				"npm-asset-library": "vendor/npm-asset",
 				"bower-asset-library": "vendor/bower-asset"
 			}
+		},
+		"allow-plugins": {
+			"yiisoft/yii2-composer": true
 		}
 	}
 }
