--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,31 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="tests/bootstrap.php"
          backupGlobals="false"
-         backupStaticAttributes="false"
-         verbose="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
          processIsolation="false"
-         stopOnFailure="false">
+         stopOnFailure="false"
+         colors="true">
     <testsuites>
-        <testsuite>
-            <directory suffix=".php">tests</directory>
+        <testsuite name="all">
+            <directory>tests/tests</directory>
         </testsuite>
     </testsuites>
-    <filter>
-        <whitelist>
-            <directory suffix=".php">behaviors</directory>
-            <directory suffix=".php">controllers</directory>
-            <directory suffix=".php">models</directory>
-            <directory suffix=".php">views</directory>
-        </whitelist>
-    </filter>
-    <logging>
-        <log type="tap" target="build/report.tap"/>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
-        <log type="coverage-text" target="build/coverage.txt"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
-    </logging>
 </phpunit>
